2013-09-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_free): Free hosts list in
	two steps instead of using g_list_free_full.

2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_exclude): New function.
	(openvas_hosts_count, openvas_hosts_removed, openvas_hosts_free)
	(openvas_hosts_shuffle, openvas_host_equal): Coding style fix.

	* base/openvas_hosts.h: Add openvas_hosts_exclude prototype.
	(openvas_hosts_t): Update comment.

2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	A couple of changes based on suggestions by Henri Doreau, more to
	follow.

	* base/openvas_hosts.h: name the HOST_TYPE_* enum as host_type.
	(openvas_host): Change type's type to host_type.
	(openvas_hosts): Make removed variable unsigned.

	* base/openvas_hosts.c (openvas_hosts_remove_duplicates): Declare
	elements variable at top of the block.

2013-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/resolve.c (host2ip): Removed. It is an unused function.

2013-09-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Fix a couple of memory leaks.

	* misc/pcap.c (v6_getinterfaces): Call freeifaddrs if getifaddrs call
	succeeds.

	* misc/plugutils.c (plug_set_replace_key): Free str when soc is null
	too.

	* nasl/nasl_host.c (get_host_ip): Use the already duplicated txt_ip
	instead of duplicating it again.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/test-hosts.c: New. A stand-alone test tool for module
	openvas_hosts. Developed by Hani Benhabiles.

	* base/CMakeLists.txt: Add handling for test-hosts.c.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/Doxyfile.in: Removed handling of module hg.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* hg/: Removed.

2013-09-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Remove unused hg/ module.

	* hg/hg_filter.h, hg/hg_subnet.c,