@@ -1,9 +1,17 @@
+2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* base/openvas_hosts.c (openvas_hosts_shuffle): Add null pointer check.
+	(openvas_host_reverse_lookup, openvas_hosts_reverse_lookup_only): New
+	functions.
+
+	* base/openvas_hosts.h: Add prototype accordingly.
+
 2013-09-10  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	* base/openvas_hosts.c (openvas_hosts_free): Free hosts list in
 	two steps instead of using g_list_free_full.
 
-2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>
+2013-09-10  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* base/openvas_hosts.c (openvas_hosts_exclude): New function.
 	(openvas_hosts_count, openvas_hosts_removed, openvas_hosts_free)
@@ -12,7 +20,7 @@
 	* base/openvas_hosts.h: Add openvas_hosts_exclude prototype.
 	(openvas_hosts_t): Update comment.
 
-2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>
+2013-09-10  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	A couple of changes based on suggestions by Henri Doreau, more to
 	follow.
